--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dev": "nodemon src/server.js"
   },
   "dependencies": {
+    "@sentry/node": "5.6.2",
     "bcryptjs": "^2.4.3",
     "crypto": "^1.0.1",
     "date-fns": "^2.0.0-beta.5",
