--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,16 @@ DB_HOST=
 DB_USER=
 DB_PASS=
 DB_NAME=
+
+#SENTRY
+
+SENTRY_DSN=
+
+#MONGO
+MONGO_URL=mongodb://localhost:27017/meetup
+
+#MAIL
+MAIL_HOST=
+MAIL_PORT=
+MAIL_USER=
+MAIL_PASS=
