--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.6.12",
+    "mongoose": "^5.7.0",
     "multer": "^1.4.2",
+    "nodemailer": "^6.3.0",
     "pg": "^7.12.1",
     "pg-hstore": "^2.3.3",
     "sequelize": "^5.16.0",
